feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1086,15 +1086,17 @@
               "name": "enable_prefix_match_in_filter",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_prefix_match_in_filter }} (Default: 0, it means using fuzzy matching.)\n",
-                "Set whether the menu uses prefix matching mode for completion list filtering.\n",
-                "If use prefix matching mode (set to 1), the common prefix of the current completion list will be automatically extracted."
+                "Set whether the menu uses prefix matching for completion filtering.\n",
+                "If use prefix matching (set to 1), the common prefix of the current completions will be automatically extracted.\n",
+                "Otherwise, use fuzzy matching, which supports the use of * and ? as wildcards."
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "Set to 0 (Default)\n",
-                    "It means using fuzzy matching."
+                    "It means using fuzzy matching.\n",
+                    "It supports the use of * and ? as wildcards."
                   ]
                 },
                 {
@@ -1102,7 +1104,7 @@
                   "tip": [
                     "Set to 1\n",
                     "It means using prefix matching.\n",
-                    "The common prefix of the current completion list will be automatically extracted."
+                    "The common prefix of the current completions will be automatically extracted."
                   ]
                 }
               ]
