--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1080,15 +1080,17 @@
               "name": "enable_prefix_match_in_filter",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_prefix_match_in_filter }} (默认值为 0, 表示使用模糊匹配)\n",
-                "设置菜单是否使用前缀匹配模式进行补全过滤。\n",
-                "如果你开启了前缀匹配(设置为1), 将会自动提取当前补全候选的共用前缀。"
+                "设置菜单是否使用前缀匹配进行补全过滤。\n",
+                "如果你开启了前缀匹配(设置为1), 将会自动提取当前所有补全项的公共前缀。\n",
+                "否则使用模糊匹配，它支持使用 * 和 ? 作为通配符。"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "设置为 0 (默认值)\n",
-                    "使用模糊匹配, 你只需要输入部分字符即可匹配到相关的补全项。"
+                    "使用模糊匹配, 你只需要输入部分字符即可匹配到相关的补全项。\n",
+                    "它支持使用 * 和 ? 作为通配符。"
                   ]
                 },
                 {
