feat(scripts): optimize development scripts

--- a/scripts/language/en-US.json
+++ b/scripts/language/en-US.json
@@ -1,5 +1,4 @@
 {
-  "need-admin": "Require admin permissions.",
   "need-pwsh": "Require PowerShell Core (pwsh 7+).",
   "import-psc": "Before running this script, you should install the PSCompletions module and import it.",
   "check-guid-valid": {
@@ -101,8 +100,8 @@
     "noExist": "<@Magenta>{{ $completion_name }}<@Red> isn't exist.",
     "linkDone": [
       "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been linked to the completions directory of the PSCompletions module.\n",
-      "<@Yellow>Note: This link operation is only for the test or development of completion, and should be removed after completing the work.\n",
-      "Command: <@Magenta>{{ \"psc rm \" + $completion_name }}"
+      "<@Yellow>Note: This link operation is only for the test or development of completion, and unlink it in time after completion.\n",
+      "Command: <@Magenta>.\\scripts\\unlink-completion.ps1 {{ $completion_name }}"
     ]
   },
   "publish-module": {
