--- a/scripts/language/zh-CN.json
+++ b/scripts/language/zh-CN.json
@@ -1,5 +1,4 @@
 {
-  "need-admin": "运行这个脚本需要管理员权限",
   "need-pwsh": "这个脚本需要 PowerShell Core (pwsh 7+) 才能运行。",
   "import-psc": "在运行此脚本前，你应该安装 PSCompletions 模块并导入它。",
   "check-guid-valid": {
@@ -101,8 +100,8 @@
     "noExist": "<@Magenta>{{ $completion_name }}<@Red> 不存在。",
     "linkDone": [
       "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 已经链接到 PSCompletions 模块的补全目录中。\n",
-      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请立即移除它。\n",
-      "命令: <@Magenta>{{ \"psc rm \" + $completion_name }}"
+      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时解除链接。\n",
+      "命令: <@Magenta>.\\scripts\\unlink-completion.ps1 {{ $completion_name }}"
     ]
   },
   "publish-module": {
