--- a/scripts/template/language/en-US.json
+++ b/scripts/template/language/en-US.json
@@ -1,5 +1,12 @@
 {
-  "root": [],
+  "root": [
+    {
+      "name": "add",
+      "tip": [
+        "Add a new item."
+      ]
+    }
+  ],
   "options": [
     {
       "name": "--version",
