--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -1,5 +1,12 @@
 {
-  "root": [],
+  "root": [
+    {
+      "name": "add",
+      "tip": [
+        "添加一个新项。"
+      ]
+    }
+  ],
   "options": [
     {
       "name": "--version",
