--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -3,19 +3,19 @@
     {
       "name": "abandon",
       "tip": [
-        "Abandon a revision"
+        "丢弃一个修订"
       ]
     },
     {
       "name": "absorb",
       "tip": [
-        "Move changes from a revision into the stack of mutable revisions"
+        "将一个修订的变更移动到可变修订的栈中"
       ]
     },
     {
       "name": "bisect",
       "tip": [
-        "Find a bad revision by bisection"
+        "通过二分查找找到一个错误的修订"
       ]
     },
     {
@@ -24,7 +24,7 @@
         "b"
       ],
       "tip": [
-        "Manage bookmarks"
+        "管理书签"
       ]
     },
     {
@@ -33,13 +33,13 @@
         "ci"
       ],
       "tip": [
-        "Update the description and create a new change on top"
+        "更新变更描述并创建一个新的变更"
       ]
     },
     {
       "name": "config",
       "tip": [
-        "Manage config options"
+        "管理配置选项"
       ]
     },
     {
@@ -48,31 +48,31 @@
         "desc"
       ],
       "tip": [
-        "Update the change description or other metadata"
+        "更新变更描述或其他元数据"
       ]
     },
     {
       "name": "diff",
       "tip": [
-        "Compare file contents between two revisions"
+        "比较两个修订之间文件内容的差异"
       ]
     },
     {
       "name": "diffedit",
       "tip": [
-        "Touch up the content changes in a revision with a diff editor"
+        "使用差异编辑器编辑修订中的内容变更"
       ]
     },
     {
       "name": "duplicate",
       "tip": [
-        "Create new changes with the same content as existing ones"
+        "创建与现有变更内容相同的新变更"
       ]
     },
     {
       "name": "edit",
       "tip": [
-        "Sets the specified revision as the working-copy revision"
+        "将指定的修订设置为工作副本修订"
       ]
     },
     {
@@ -81,67 +81,67 @@
         "evolution-log"
       ],
       "tip": [
-        "Show how a change has evolved over time"
+        "显示变更如何随时间演变"
       ]
     },
     {
       "name": "file",
       "tip": [
-        "File operations"
+        "文件操作"
       ]
     },
     {
       "name": "fix",
       "tip": [
-        "Update files with formatting fixes or other changes"
+        "更新文件中的格式化修复或其他变更"
       ]
     },
     {
       "name": "gerrit",
       "tip": [
-        "Interact with Gerrit Code Review"
+        "与 Gerrit Code Review 交互"
       ]
     },
     {
       "name": "git",
       "tip": [
-        "Commands for working with Git remotes and the underlying Git repo"
+        "与 Git 远程和底层 Git 仓库交互的命令"
       ]
     },
     {
       "name": "help",
       "tip": [
-        "Print this message or the help of the given subcommand(s)"
+        "打印此消息或给定子命令的帮助"
       ]
     },
     {
       "name": "interdiff",
       "tip": [
-        "Compare the changes of two commits"
+        "比较两个提交之间的变更"
       ]
     },
     {
       "name": "log",
       "tip": [
-        "Show revision history"
+        "显示修订历史记录"
       ]
     },
     {
       "name": "metaedit",
       "tip": [
-        "Modify the metadata of a revision without changing its content"
+        "修改修订的元数据而不更改其内容"
       ]
     },
     {
       "name": "new",
       "tip": [
-        "Create a new, empty change and (by default) edit it in the working copy"
+        "创建一个新的、空的变更并（默认）在工作副本中编辑它"
       ]
     },
     {
       "name": "next",
       "tip": [
-        "Move the working-copy commit to the child revision"
+        "将工作副本提交移动到子修订"
       ]
     },
     {
@@ -150,91 +150,91 @@
         "op"
       ],
       "tip": [
-        "Commands for working with the operation log"
+        "操作日志命令"
       ]
     },
     {
       "name": "parallelize",
       "tip": [
-        "Parallelize revisions by making them siblings"
+        "并行化修订，将其设为兄弟修订"
       ]
     },
     {
       "name": "prev",
       "tip": [
-        "Change the working copy revision relative to the parent revision"
+        "将工作副本提交移动到父修订"
       ]
     },
     {
       "name": "rebase",
       "tip": [
-        "Move revisions to different parent(s)"
+        "将修订移动到不同的父修订"
       ]
     },
     {
       "name": "redo",
       "tip": [
-        "Redo the most recently undone operation"
+        "重做最近撤销的操作"
       ]
     },
     {
       "name": "resolve",
       "tip": [
-        "Resolve conflicted files with an external merge tool"
+        "使用外部合并工具解决合并冲突"
       ]
     },
     {
       "name": "restore",
       "tip": [
-        "Restore paths from another revision"
+        "从另一个修订恢复路径"
       ]
     },
     {
       "name": "revert",
       "tip": [
-        "Apply the reverse of the given revision(s)"
+        "应用给定修订的反向变更"
       ]
     },
     {
       "name": "root",
       "tip": [
-        "Show the current workspace root directory (shortcut for `jj workspace root`)"
+        "显示当前工作区根目录（`jj workspace root` 的快捷方式）"
       ]
     },
     {
       "name": "show",
       "tip": [
-        "Show commit description and changes in a revision"
+        "显示修订的变更描述和变更内容"
       ]
     },
     {
       "name": "sign",
       "tip": [
-        "Cryptographically sign a revision"
+        "使用密码学签名一个修订"
       ]
     },
     {
       "name": "simplify-parents",
       "tip": [
-        "Simplify parent edges for the specified revision(s)"
+        "简化指定修订的父边"
       ]
     },
     {
       "name": "sparse",
       "tip": [
-        "Manage which paths from the working-copy commit are present in the working copy"
+        "管理工作副本提交中哪些路径在工作副本中可见"
       ]
     },
     {
       "name": "split",
       "tip": [
-        "Split a revision in two"
+        "将一个修订分为两个"
       ]
     },
     {
       "name": "squash",
       "tip": [
-        "Move changes from a revision into another revision"
+        "将一个修订的变更移动到另一个修订"
       ]
     },
     {
@@ -243,43 +243,43 @@
         "st"
       ],
       "tip": [
-        "Show high-level repo status"
+        "显示仓库的高一级状态"
       ]
     },
     {
       "name": "tag",
       "tip": [
-        "Manage tags"
+        "管理标签"
       ]
     },
     {
       "name": "undo",
       "tip": [
-        "Undo the last operation"
+        "撤销最近的操作"
       ]
     },
     {
       "name": "unsign",
       "tip": [
-        "Drop a cryptographic signature"
+        "删除一个修订的密码学签名"
       ]
     },
     {
       "name": "util",
       "tip": [
-        "Infrequently used commands such as for generating shell completions"
+        "不经常使用的命令，例如生成 shell 补全"
       ]
     },
     {
       "name": "version",
       "tip": [
-        "Display version information"
+        "显示版本信息"
       ]
     },
     {
       "name": "workspace",
       "tip": [
-        "Commands for working with workspaces"
+        "管理工作区"
       ]
     }
   ],
@@ -311,20 +311,20 @@
       ],
       "tip": [
         "U: -R|--repository <REPOSITORY>\n",
-        "Path to repository to operate on"
+        "要操作的仓库路径"
       ],
       "next": 0
     },
     {
       "name": "--ignore-working-copy",
       "tip": [
-        "Don't snapshot the working copy, and don't update it"
+        "不快照工作副本，也不更新它"
       ]
     },
     {
       "name": "--ignore-immutable",
       "tip": [
-        "Allow rewriting immutable commits"
+        "允许重写不可变提交"
       ]
     },
     {
@@ -334,20 +334,20 @@
       ],
       "tip": [
         "U: --at-operation|--at-op <AT_OPERATION>\n",
-        "Operation to load the repo at"
+        "要加载的操作"
       ]
     },
     {
       "name": "--debug",
       "tip": [
-        "Enable debug logging"
+        "启用调试日志记录"
       ]
     },
     {
       "name": "--color",
       "tip": [
         "U: --color <WHEN>\n",
-        "When to colorize output"
+        "当输出颜色时"
       ],
       "next": [
         {
@@ -367,27 +367,27 @@
     {
       "name": "--quiet",
       "tip": [
-        "Silence non-primary command output"
+        "静音非主要命令输出"
       ]
     },
     {
       "name": "--no-pager",
       "tip": [
-        "Disable the pager"
+        "禁用分页器"
       ]
     },
     {
       "name": "--config",
       "tip": [
         "U: --config <NAME=VALUE>\n",
-        "Additional configuration options (can be repeated)"
+        "额外的配置选项（可以重复）"
       ]
     },
     {
       "name": "--config-file",
       "tip": [
         "U: --config-file <PATH>\n",
-        "Additional configuration files (can be repeated)"
+        "额外的配置文件（可以重复）"
       ]
     }
   ],
