feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -604,7 +604,7 @@
     {
       "name": "alias",
       "tip": [
-        "U: alias <list, add|rm> [<args>]\n",
+        "U: alias <list|add|rm> [<args>]\n",
         "Manage Scoop aliases"
       ],
       "next": [
@@ -637,7 +637,7 @@
     {
       "name": "shim",
       "tip": [
-        "U: shim <list, add|rm|info|alter> [<shim>...] [-g] [other_args]\n",
+        "U: shim <list|add|rm|info|alter> [<shim>...] [-g] [other_args]\n",
         "Manage Scoop shims"
       ],
       "next": [
@@ -1460,8 +1460,8 @@
       "name": "exclude_buckets",
       "value": "",
       "tip": [
-        "动态生成补全时，要排除的 bucket\n",
-        "多个 bucket 使用 | 分割，例如 'aaa|bbb'"
+        "Buckets to be excluded when dynamically generating completions.\n",
+        "Multiple buckets are separated by |, for example 'aaa|bbb'"
       ]
     }
   ]
