--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -602,7 +602,7 @@
     {
       "name": "alias",
       "tip": [
-        "U: alias <list, add|rm> [<args>]\n",
+        "U: alias <list|add|rm> [<args>]\n",
         "管理 Scoop 别名"
       ],
       "next": [
@@ -635,7 +635,7 @@
     {
       "name": "shim",
       "tip": [
-        "U: shim <list, add|rm|info|alter> [<shim>...] [-g] [other_args]\n",
+        "U: shim <list|add|rm|info|alter> [<shim>...] [-g] [other_args]\n",
         "管理 Scoop shims"
       ],
       "next": [
